# remote-control

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  deployment.md  development.md  getting-started.md
scripts/: sign-mac.sh
src/: cli.rs  main.rs  protocol.rs  tunnel.rs
src/client/: mod.rs  sync.rs
src/keyboard/: listener.rs
src/mpv/: controller.rs  ipc.rs  mod.rs
src/relay/: mod.rs  room.rs
