[package]
name = "remote-control"
version = "0.3.0"
edition = "2021"
description = "Synchronized keyboard control over the network"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rand = "0.9"
rdev = { version = "0.5", features = ["serialize"] }
